# LearningCpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Egor_Title6/: CMakeLists.txt  main.cpp
Work day #1/day1/: CMakeLists.txt
Work_day2/: CMakeLists.txt  main.cpp
Work_day_1/: CMakeLists.txt  main.cpp
lesson_4_OOP/: CMakeLists.txt  main.cpp
